Fix trending alignment

--- a/styles.css
+++ b/styles.css
@@ -125,8 +125,10 @@
     border-radius: 45%;
     grid-area: 2 / 2 / 3 / 3;
     /*align-self: center;*/
+
     
 }
+
 
 .welcome > .text {
    /* background-color: orange;*/
@@ -277,15 +279,26 @@
 
 }
 
-.mainContent > .announcements,
-.mainContent > .trending {
+.mainContent > .announcements {
    /* background-color: green;*/
    display:grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1.25fr 8fr;
 }
+.mainContent > .trending {
+    /* background-color: green;*/
+    display:grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: 1.25fr 8fr;
+ }
 
-.announcementsCardContainer,
+.announcementsCardContainer {
+    display:grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    background-color: rgb(240, 224, 255);
+    margin: 12px 25px;
+}
 .trendingCardContainer {
     display:grid;
     grid-template-columns: 1fr;
@@ -337,14 +350,25 @@
 .three > .icon,
 .four > .icon {
     grid-area: 1 / 1 / 3 / 2;
-    background-color: red;
+    /*background-color: red;*/
+    display:grid;
+grid-template-columns: 1fr 1fr 1fr;
+grid-template-rows: 1fr 1fr 1fr;}
+
+.icon > p {
+    grid-area: 2 / 3 / 3 / 4;
+    place-self: center;
+    margin-right:5px;
 }
+
 
 .one > .handle,
 .two > .handle,
 .three > .handle,
 .four > .handle {
     grid-area: 1 / 2 / 2 / 3;
+    place-self: end start;
+    margin-bottom: 2px;
 }
 
 .one > .fullName,
